dart_sys/src/lib.rs


extern "C" {
    #[doc = " Gets the UTF-16 encoded representation of a string."]
    #[doc = ""]
    #[doc = " \\param str A string."]
    #[doc = " \\param utf16_array An array allocated by the caller, used to return"]
    #[doc = "   the array of UTF-16 encoded characters."]
    #[doc = " \\param length Used to pass in the length of the provided array."]
    #[doc = "   Used to return the length of the array which was actually used."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_StringToUTF16(
        str: Dart_Handle,
        utf16_array: *mut u16,
        length: *mut isize,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the storage size in bytes of a String."]
    #[doc = ""]
    #[doc = " \\param str A String."]
    #[doc = " \\param length Returns the storage size in bytes of the String."]
    #[doc = "  This is the size in bytes needed to store the String."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_StringStorageSize(str: Dart_Handle, size: *mut isize) -> Dart_Handle;
}

extern "C" {
    #[doc = " Retrieves some properties associated with a String."]
    #[doc = " Properties retrieved are:"]
    #[doc = " - character size of the string (one or two byte)"]
    #[doc = " - length of the string"]
    #[doc = " - peer pointer of string if it is an external string."]
    #[doc = " \\param str A String."]
    #[doc = " \\param char_size Returns the character size of the String."]
    #[doc = " \\param str_len Returns the length of the String."]
    #[doc = " \\param peer Returns the peer pointer associated with the String or 0 if"]
    #[doc = "   there is no peer pointer for it."]
    #[doc = " \\return Success if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_StringGetProperties(
        str: Dart_Handle,
        char_size: *mut isize,
        str_len: *mut isize,
        peer: *mut *mut ::std::os::raw::c_void,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns a List<dynamic> of the desired length."]
    #[doc = ""]
    #[doc = " \\param length The length of the list."]
    #[doc = ""]
    #[doc = " \\return The List object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewList(length: isize) -> Dart_Handle;
}

#[repr(i32)]
#[derive(Clone, Copy, Debug, PartialEq, Eq)]
pub enum Dart_CoreType_Id {
    Dynamic = 0,
    Int = 1,
    String = 2,
}

extern "C" {
    #[doc = " Returns a List of the desired length with the desired element type."]
    #[doc = ""]
    #[doc = " \\param element_type_id The type of elements of the list."]
    #[doc = ""]
    #[doc = " \\param length The length of the list."]
    #[doc = ""]
    #[doc = " \\return The List object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewListOf(element_type_id: Dart_CoreType_Id, length: isize) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns a List of the desired length with the desired element type."]
    #[doc = ""]
    #[doc = " \\param element_type Handle to a type object. E.g., from Dart_GetType."]
    #[doc = ""]
    #[doc = " \\param length The length of the list."]
    #[doc = ""]
    #[doc = " \\return The List object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewListOfType(element_type: Dart_Handle, length: isize) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the length of a List."]
    #[doc = ""]
    #[doc = " May generate an unhandled exception error."]
    #[doc = ""]
    #[doc = " \\param list A List."]
    #[doc = " \\param length Returns the length of the List."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_ListLength(list: Dart_Handle, length: *mut isize) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the Object at some index of a List."]
    #[doc = ""]
    #[doc = " If the index is out of bounds, an error occurs."]
    #[doc = ""]
    #[doc = " May generate an unhandled exception error."]
    #[doc = ""]
    #[doc = " \\param list A List."]
    #[doc = " \\param index A valid index into the List."]
    #[doc = ""]
    #[doc = " \\return The Object in the List at the specified index if no error"]
    #[doc = "   occurs. Otherwise returns an error handle."]
    pub fn Dart_ListGetAt(list: Dart_Handle, index: isize) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets a range of Objects from a List."]
    #[doc = ""]
    #[doc = " If any of the requested index values are out of bounds, an error occurs."]
    #[doc = ""]
    #[doc = " May generate an unhandled exception error."]
    #[doc = ""]
    #[doc = " \\param list A List."]
    #[doc = " \\param offset The offset of the first item to get."]
    #[doc = " \\param length The number of items to get."]
    #[doc = " \\param result A pointer to fill with the objects."]
    #[doc = ""]
    #[doc = " \\return Success if no error occurs during the operation."]
    pub fn Dart_ListGetRange(
        list: Dart_Handle,
        offset: isize,
        length: isize,
        result: *mut Dart_Handle,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Sets the Object at some index of a List."]
    #[doc = ""]
    #[doc = " If the index is out of bounds, an error occurs."]
    #[doc = ""]
    #[doc = " May generate an unhandled exception error."]
    #[doc = ""]
    #[doc = " \\param array A List."]
    #[doc = " \\param index A valid index into the List."]
    #[doc = " \\param value The Object to put in the List."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_ListSetAt(list: Dart_Handle, index: isize, value: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " May generate an unhandled exception error."]
    pub fn Dart_ListGetAsBytes(
        list: Dart_Handle,
        offset: isize,
        native_array: *mut u8,
        length: isize,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " May generate an unhandled exception error."]
    pub fn Dart_ListSetAsBytes(
        list: Dart_Handle,
        offset: isize,
        native_array: *const u8,
        length: isize,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the Object at some key of a Map."]
    #[doc = ""]
    #[doc = " May generate an unhandled exception error."]
    #[doc = ""]
    #[doc = " \\param map A Map."]
    #[doc = " \\param key An Object."]
    #[doc = ""]
    #[doc = " \\return The value in the map at the specified key, null if the map does not"]
    #[doc = "   contain the key, or an error handle."]
    pub fn Dart_MapGetAt(map: Dart_Handle, key: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns whether the Map contains a given key."]
    #[doc = ""]
    #[doc = " May generate an unhandled exception error."]
    #[doc = ""]
    #[doc = " \\param map A Map."]
    #[doc = ""]
    #[doc = " \\return A handle on a boolean indicating whether map contains the key."]
    #[doc = "   Otherwise returns an error handle."]
    pub fn Dart_MapContainsKey(map: Dart_Handle, key: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the list of keys of a Map."]
    #[doc = ""]
    #[doc = " May generate an unhandled exception error."]
    #[doc = ""]
    #[doc = " \\param map A Map."]
    #[doc = ""]
    #[doc = " \\return The list of key Objects if no error occurs. Otherwise returns an"]
    #[doc = "   error handle."]
    pub fn Dart_MapKeys(map: Dart_Handle) -> Dart_Handle;
}

#[repr(i32)]
#[derive(Copy, Clone, PartialEq, Eq, Debug)]
pub enum Dart_TypedData_Type {
    ByteData = 0,
    Int8 = 1,
    Uint8 = 2,
    Uint8Clamped = 3,
    Int16 = 4,
    Uint16 = 5,
    Int32 = 6,
    Uint32 = 7,
    Int64 = 8,
    Uint64 = 9,
    Float32 = 10,
    Float64 = 11,
    Float32x4 = 12,
    Invalid = 13,
}

extern "C" {
    #[doc = " Return type if this object is a TypedData object."]
    #[doc = ""]
    #[doc = " \\return kInvalid if the object is not a TypedData object or the appropriate"]
    #[doc = "   Dart_TypedData_Type."]
    pub fn Dart_GetTypeOfTypedData(object: Dart_Handle) -> Dart_TypedData_Type;
}

extern "C" {
    #[doc = " Return type if this object is an external TypedData object."]
    #[doc = ""]
    #[doc = " \\return kInvalid if the object is not an external TypedData object or"]
    #[doc = "   the appropriate Dart_TypedData_Type."]
    pub fn Dart_GetTypeOfExternalTypedData(object: Dart_Handle) -> Dart_TypedData_Type;
}

extern "C" {
    #[doc = " Returns a TypedData object of the desired length and type."]
    #[doc = ""]
    #[doc = " \\param type The type of the TypedData object."]
    #[doc = " \\param length The length of the TypedData object (length in type units)."]
    #[doc = ""]
    #[doc = " \\return The TypedData object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewTypedData(type_: Dart_TypedData_Type, length: isize) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns a TypedData object which references an external data array."]
    #[doc = ""]
    #[doc = " \\param type The type of the data array."]
    #[doc = " \\param data A data array. This array must not move."]
    #[doc = " \\param length The length of the data array (length in type units)."]
    #[doc = ""]
    #[doc = " \\return The TypedData object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewExternalTypedData(
        type_: Dart_TypedData_Type,
        data: *mut ::std::os::raw::c_void,
        length: isize,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns a TypedData object which references an external data array."]
    #[doc = ""]
    #[doc = " \\param type The type of the data array."]
    #[doc = " \\param data A data array. This array must not move."]
    #[doc = " \\param length The length of the data array (length in type units)."]
    #[doc = " \\param peer A pointer to a native object or NULL.  This value is"]
    #[doc = "   provided to callback when it is invoked."]
    #[doc = " \\param external_allocation_size The number of externally allocated"]
    #[doc = "   bytes for peer. Used to inform the garbage collector."]
    #[doc = " \\param callback A function pointer that will be invoked sometime"]
    #[doc = "   after the object is garbage collected, unless the handle has been deleted."]
    #[doc = "   A valid callback needs to be specified it cannot be NULL."]
    #[doc = ""]
    #[doc = " \\return The TypedData object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewExternalTypedDataWithFinalizer(
        type_: Dart_TypedData_Type,
        data: *mut ::std::os::raw::c_void,
        length: isize,
        peer: *mut ::std::os::raw::c_void,
        external_allocation_size: isize,
        callback: Dart_WeakPersistentHandleFinalizer,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns a ByteBuffer object for the typed data."]
    #[doc = ""]
    #[doc = " \\param type_data The TypedData object."]
    #[doc = ""]
    #[doc = " \\return The ByteBuffer object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewByteBuffer(typed_data: Dart_Handle) -> Dart_Handle;
}
